--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3"
   },
   "engines": {
